--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,6 +1,6 @@
 :root {
-    --mainBrown:#2d1ef1;
-    --mainYellow: #ff9e09;
+    --mainBrown:#2d1e1f;
+    --mainYellow: rgb(255, 158, 9);
     --mainGrey: #ece8dc;
     --mainWhite: #fff;
     --mainDark: #222222;
@@ -26,4 +26,40 @@ h1,h2,h3,h4,h5,h6{
     color:  var(--mainYellow);
     font-size: 2rem;
 
+}
+.default-background {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: unset !important;
+  background: linear-gradient(rgba(255, 158, 9, 0.5), rgba(255, 158, 9, 0.5));
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+.default-background , .about-background{
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: unset !important;
+    background: linear-gradient(rgba(255, 158, 9, 0.5), rgba(255, 158, 9, 0.5));
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+  }
+  .about-background {
+    min-height: 60vh;
+  }
+.btn-yellow{
+    color: var(--mainYellow);
+    border-color: var(--mainYellow);
+}
+.btn-yellow:hover{
+    background: var(--mainYellow);
+    color: var(--mainBrown) ;
+}
+.footer {
+    background: var(--mainDark);
 }
